--- a/views/login.ejs
+++ b/views/login.ejs
@@ -50,9 +50,9 @@
 <body>
   <div class="ui middle aligned center aligned grid">
     <div class="column">
-      <h2 class="ui teal image header">
+      <h2 class="ui red image header">
         <div class="content">
-          Recommendation as a Service
+          Penn Coursify
         </div>
       </h2>
         <% if (messages.errors.length !== 0) { %>
@@ -71,7 +71,7 @@
                   <input type="password" name="password" placeholder="Password">
                 </div>
               </div>
-              <button class="ui fluid teal submit button">Log In</button>
+              <button class="ui fluid red submit button">Log In</button>
             </div>
             <div class="ui error message">
                 <% include ./partials/error_disp %>
