--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -56,9 +56,9 @@
 <body>
   <div class="ui middle aligned center aligned grid">
     <div class="column">
-      <h2 class="ui teal image header">
+      <h2 class="ui red image header">
         <div class="content">
-          Recommendation as a Service
+          Penn Coursify
         </div>
       </h2>
       <% if (messages.errors.length !== 0) { %>
@@ -82,7 +82,7 @@
                 <input type="password" name="confirm" placeholder="Confirm Your Password">
               </div>
             </div>
-            <button class="ui fluid large teal submit button">Sign Up</button>
+            <button class="ui fluid large red submit button">Sign Up</button>
           </div>
           <div class="ui error message">
             <% include ./partials/error_disp %>
