--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,1 @@
-<center><p class="text-center text-muted">© Copyright 2015 RAAS</p></center>
+<center><p class="text-center text-muted">© Copyright 2015 Penn Coursify</p></center>
