loading more form elements working

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -9,55 +9,84 @@
       <% include ./partials/header %>
     </header>
 
+    <script>
+      var counter = 1;
+      var limit = 10;
+      function addInput(divName){
+        if (counter == limit)  {
+          alert("You have reached the limit of adding " + counter + " inputs");
+        } else {
+          var newdiv = document.createElement('div');
+          var semester = '<select class="ui dropdown"><option value="">Department</option>' + 
+            '<option value="CIS">CIS</option><option value="ESE">ESE</option></select><select class="ui dropdown">' + 
+            '<option value="">Course Number</option><option value="331">331</option><option value="455">455</option>' + 
+            '</select><div class="ui form"><div class="inline fields"><div class="field"><div class="ui radio checkbox">' + 
+            '<input type="radio" name="rating" checked="checked"><label>1</label></div></div><div class="field">' + 
+            '<div class="ui radio checkbox"><input type="radio" name="rating"><label>2</label></div></div>' + 
+            '<div class="field"><div class="ui radio checkbox"><input type="radio" name="rating"><label>3</label></div>' + 
+            '</div><div class="field"><div class="ui radio checkbox"><input type="radio" name="rating"><label>4</label>' + 
+            '</div></div><div class="field"><div class="ui radio checkbox"><input type="radio" name="rating">' + 
+            '<label>5</label></div></div></div></div>';
+          newdiv.innerHTML = semester + semester + semester + semester + semester;
+          document.getElementById(divName).appendChild(newdiv);
+          counter++;
+        }
+      }
+    </script>
+
     <main>
       <div class="ui main text container">
         <h1 class="ui header">Rate Your Courses!</h1>
-        <form>
-          <select class="ui dropdown">
-            <option value="">Department</option>
-            <option value="CIS">CIS</option>
-            <option value="ESE">ESE</option>
-          </select>
-          <select class="ui dropdown">
-            <option value="">Course Number</option>
-            <option value="331">331</option>
-            <option value="455">455</option>
-          </select>
+        <form method="POST">
+          <div id="readroot">
+            <select class="ui dropdown">
+              <option value="">Department</option>
+              <option value="CIS">CIS</option>
+              <option value="ESE">ESE</option>
+            </select>
+            <select class="ui dropdown">
+              <option value="">Course Number</option>
+              <option value="331">331</option>
+              <option value="455">455</option>
+            </select>
 
-          <div class="ui form">
-            <div class="inline fields">
-              <div class="field">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="rating" checked="checked">
-                  <label>1</label>
+            <div class="ui form">
+              <div class="inline fields">
+                <div class="field">
+                  <div class="ui radio checkbox">
+                    <input type="radio" name="rating" checked="checked">
+                    <label>1</label>
+                  </div>
                 </div>
-              </div>
-              <div class="field">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="rating">
-                  <label>2</label>
+                <div class="field">
+                  <div class="ui radio checkbox">
+                    <input type="radio" name="rating">
+                    <label>2</label>
+                  </div>
                 </div>
-              </div>
-              <div class="field">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="rating">
-                  <label>3</label>
+                <div class="field">
+                  <div class="ui radio checkbox">
+                    <input type="radio" name="rating">
+                    <label>3</label>
+                  </div>
                 </div>
-              </div>
-              <div class="field">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="rating">
-                  <label>4</label>
+                <div class="field">
+                  <div class="ui radio checkbox">
+                    <input type="radio" name="rating">
+                    <label>4</label>
+                  </div>
                 </div>
-              </div>
-              <div class="field">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="rating">
-                  <label>5</label>
+                <div class="field">
+                  <div class="ui radio checkbox">
+                    <input type="radio" name="rating">
+                    <label>5</label>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+
+          <input class="ui button" type="button" value="Rate more courses" onClick="addInput('readroot');">
 
         </form>
       </div>
