--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -40,6 +40,7 @@
         <div class="ui grid">
           <div class="eight wide column">
             <h2 class="ui header">Rate Your Courses</h2>
+            <p>Please rate on a scale of 1-5, with 5 meaning you very much enjoyed the course's content.</p>
             <form method="POST" action="submitRatings">
               <div id="root"></div>
 
