--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,8 +1,9 @@
 <meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <% if (locals.title) { %>
   <title><%= title %></title>
 <% } %>
-
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 <link rel="stylesheet" type="text/css" href="semantic/semantic.min.css">
 <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
