--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,9 +1,8 @@
 <div class="ui fixed inverted menu">
-	<div class="ui container">
-    <a href="#" class="header item">
-      Penn Coursify
-    </a>
-    <a href="" class="item">Home</a>
-    <a href="logout" class="item">Logout</a>
-  </div>
+    <div class="ui container">
+        <a href="#" class="header item">Penn Coursify</a>
+        <a href="/dashboard" class="item">Home</a>
+        <a href="/logout" class="item">Logout</a>
+        <a href="/data-dump" class="right item">Data Dump</a>
+    </div>
 </div>
