made error page more appealing

--- a/views/recommendations.ejs
+++ b/views/recommendations.ejs
@@ -24,9 +24,9 @@
                             </td>
                             <td>
                                 <div class="ui labeled button">
-                                    <div class="ui red icon button">
+                                    <a class="ui red icon button" href="https://penncoursereview.com/course/<%= recommendations[i] %>" target="_blank">
                                         PCR
-                                    </div>
+                                    </a>
                                     <a class="ui basic red label" href="https://penncoursereview.com/course/<%= recommendations[i] %>" target="_blank">
                                         https://penncoursereview.com/course/<%= recommendations[i] %>
                                     </a>
