made data dump password type a password

--- a/views/data_dump.ejs
+++ b/views/data_dump.ejs
@@ -13,7 +13,7 @@
     <div class="ui one column centered grid container">
         <form class="ui form" action="/data-dump" method="POST">
             <div class="ui input">
-                <input type="text" name="password" placeholder="Password...">
+                <input type="password" name="password" placeholder="Password...">
             </div>
         </form>
     </div>
