--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -98,6 +98,7 @@
 
       var content = []
       $.getJSON('/course-list', function(classes, err) {
+        classes.sort();
         $.each(classes, function(i) {
           var temp = classes[i].split('-')[0] + ' ' + classes[i].split('-')[1];
           content.push({ title: classes[i], extra: temp });
