--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <div class="ui fixed inverted menu">
     <div class="ui container">
         <a href="/dashboard" class="header item">Penn Coursify</a>
-        <!--a href="/recommendations" class="item">Recommendations</a-->
+        <a href="/recommendations" class="item">Recommendations</a>
         <a href="/logout" class="item">Logout</a>
         <a href="/data-dump" class="right item">Data Dump</a>
     </div>
